<resources>
    <string name="library_name">Oops! No Internet!</string>
    <string name="default_title">No Internet</string>
    <string name="default_message">Check your Internet connection and try again.</string>
    <string name="please_turn_on">Please turn on</string>
    <string name="wifi">Wifi</string>
    <string name="mobile_data">Mobile data</string>
    <string name="default_snackbar_message">No active Internet connection!</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="please_turn_off">Please turn off</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="default_airplane_mode_message">You have turned on the airplane mode.</string>
    <string name="default_airplane_mode_snackbar_message">You have turned on the airplane mode!</string>
</resources>
